--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,84 @@ body {
   padding-bottom: 90px;
 }
 
+/* top navbar */
+.top-navbar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.top-navbar p {
+  margin-top: 13px;
+  margin-left: 15px;
+}
+
+.top-navbar .icons {
+  margin-top: 13px;
+  margin-right: 15px;
+}
+
+.top-navbar a {
+  text-decoration: none;
+  color: black;
+  margin-left: 10px;
+}
+
+.top-navbar a img {
+  margin-bottom: 3px;
+}
+
+.top-navbar a:hover {
+  color: black;
+}
+
+@media screen and (max-width:400px) {
+  .top-navbar a {
+    font-size: 13px;
+  }
+
+  .top-navbar a img {
+    width: 15px;
+  }
+
+  .top-navbar p {
+    font-size: 13px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .top-navbar a {
+    font-size: 10px;
+  }
+
+  .top-navbar a img {
+    width: 13px;
+  }
+
+  .top-navbar p {
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width:318px) {
+  .top-navbar a {
+    font-size: 8px;
+    margin-left: 0;
+  }
+
+  .top-navbar a img {
+    width: 10px;
+    margin-left: 0;
+  }
+
+  .top-navbar p {
+    font-size: 10px;
+    margin-top: 20px;
+  }
+}
+
+/* top navbar */
+
+
 h1,
 h2 {
   font-family: 'Dancing Script', cursive;
@@ -1142,6 +1220,7 @@ option {
 #order-confirmation-text.visible {
   display: block;
 }
+
 
 .closse-button {
   color: #ffffff;
